--- a/package.json
+++ b/package.json
@@ -4,38 +4,40 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "add:component": "npx shadcn-ui@latest add",
     "db:view": "pnpm prisma studio",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.0",
+    "@prisma/client": "^4.15.0",
+    "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^1.54.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.276.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@auth/prisma-adapter": "^1.0.0",
-    "@prisma/client": "^4.15.0",
-
     "micro-cors": "^0.1.1",
     "next": "^13.4.4",
     "next-auth": "^4.22.1",
-    "stripe": "^12.8.0",
-    "@stripe/stripe-js": "^1.54.0",
     "openai": "^4.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "stripe": "^12.8.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "ytdl-core": "^4.11.5",
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/micro-cors": "^0.1.3",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -47,9 +49,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.29",
+    "prisma": "^4.15.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "5.1.3",
-    "@types/micro-cors": "^0.1.3",
-    "prisma": "^4.15.0"
+    "typescript": "5.1.3"
   }
 }
