--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "add:component": "npx shadcn-ui@latest add",
     "db:view": "pnpm prisma studio",
+    "db:migrate": "prisma migrate dev",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
@@ -21,12 +25,15 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@stripe/stripe-js": "^1.54.0",
+    "ai": "^2.2.12",
+    "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.276.0",
     "micro-cors": "^0.1.1",
     "next": "^13.4.4",
     "next-auth": "^4.22.1",
+    "next-connect": "^1.0.0",
     "openai": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,9 +41,15 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "ytdl-core": "^4.11.5",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "@tanstack/react-query": "^4.35.3",
+    "ai": "^2.2.12",
+    "axios": "^1.5.0",
+    "@ffmpeg/ffmpeg": "^0.12.6",
+    "@ffmpeg/util": "^0.12.1"
   },
   "devDependencies": {
+    "@types/busboy": "^1.5.0",
     "@types/micro-cors": "^0.1.3",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.15",
@@ -51,6 +64,7 @@
     "postcss": "^8.4.29",
     "prisma": "^4.15.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "tsx": "^3.12.9"
   }
 }
