--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
+    "@ffmpeg/ffmpeg": "^0.12.6",
+    "@ffmpeg/util": "^0.12.1",
     "@prisma/client": "^4.15.0",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -25,7 +28,9 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@stripe/stripe-js": "^1.54.0",
+    "@tanstack/react-query": "^4.35.3",
     "ai": "^2.2.12",
+    "axios": "^1.5.0",
     "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -40,13 +45,9 @@
     "stripe": "^12.8.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "tmp": "^0.2.1",
     "ytdl-core": "^4.11.5",
-    "zod": "^3.22.2",
-    "@tanstack/react-query": "^4.35.3",
-    "ai": "^2.2.12",
-    "axios": "^1.5.0",
-    "@ffmpeg/ffmpeg": "^0.12.6",
-    "@ffmpeg/util": "^0.12.1"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/busboy": "^1.5.0",
@@ -54,6 +55,7 @@
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/tmp": "^0.2.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.15",
@@ -64,7 +66,7 @@
     "postcss": "^8.4.29",
     "prisma": "^4.15.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "5.1.3",
-    "tsx": "^3.12.9"
+    "tsx": "^3.12.9",
+    "typescript": "5.1.3"
   }
 }
