feat: youtube and stripe features

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "db:migrate": "prisma migrate dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "patch-package"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -34,25 +35,30 @@
     "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
     "lucide-react": "^0.276.0",
     "micro-cors": "^0.1.1",
     "next": "^13.4.4",
     "next-auth": "^4.22.1",
     "next-connect": "^1.0.0",
     "openai": "^4.6.0",
+    "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stripe": "^12.8.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "tmp": "^0.2.1",
-    "ytdl-core": "^4.11.5",
+    "ytdl-core": "4.10.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/busboy": "^1.5.0",
+    "@types/fluent-ffmpeg": "^2.1.22",
     "@types/micro-cors": "^0.1.3",
     "@types/node": "^20.6.0",
+    "@types/node-wav": "^0.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/tmp": "^0.2.4",
@@ -68,5 +74,10 @@
     "tailwindcss": "^3.3.3",
     "tsx": "^3.12.9",
     "typescript": "5.1.3"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "fluent-ffmpeg@2.1.2": "patches/fluent-ffmpeg@2.1.2.patch"
+    }
   }
 }
