--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,13 @@
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 GOOGLE_CLIENT_ID='To obtain it, you can create a credential in the Google Cloud Console at https://console.developers.google.com/apis/credentials'
 GOOGLE_CLIENT_SECRET='Similarly as mentioned above'
-NEXTAUTH_URL="http://YOUR_WEBSITE_URL/  This isn't necessary if it's deployed to Vercel."
+# This isn't necessary if it's deployed to Vercel.
+NEXTAUTH_URL="http://localhost:3000"
+# generate a random string here: openssl rand -base64 32
 NEXTAUTH_SECRET="SECRET"
 STRIPE_SECRET_KEY="sk_YOUR_STRIPE_SECRET_KEY"
 STRIPE_WEBHOOK_SECRET='whsec_YOUR_STRIPE_WEBHOOK_SECRET_KEY'
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_YOUR_STRIPE_PUBLIC_KEY"
-NEXT_PUBLIC_WEBSITE_URL="http://YOUR_WEBSITE_URL/"
+NEXT_PUBLIC_VERCEL_URL="http://localhost:3000"
+OPENAI_KEY=""
+NEXT_PUBLIC_STRIPE_PRODUCT_ID=""
