--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package && prisma generate"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
